--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -14,23 +14,17 @@
   <strong>Thread:</strong>
   <%= @forum.thread %>
 </p>
-<h3>Comments</h3>
-<%= form_for([@forum, @forum.comments.build]) do |fprm| %>
-  <% if @forum.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@forum.errors.count, "error") %> prohibited this forum from being saved:</h2>
-    </div>
-  <% end %>
-  <div class="field">
-    <%= form.label :username %><br>
-    <%= form.text_field :username %>
-  </div>
-  <div class="field">
-    <%= form.label :title %><br>
-    <%= form.text_area :title %>
-  </div>
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+<h2>Add a comment:</h2>
+<%= form_for([@forum, @forum.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %><br>
+    <%= f.text_field :commenter %>
+  </p>
+  <p>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
 <% end %>
-
